# picoCSV2root

./: .gitignore  CMakeLists.txt  CSV2root  CSV2root.cpp  Makefile  README.md  merge_root.sh  rapidcsv.h  rm_csv.sh  run.sh
CSV2root.dSYM/Contents/: Info.plist
ana/: drawWaveform.cpp  run_drawWaveform.sh  simpAna.cpp
ana/drawWaveform/: drawWaveform.cpp
ana/find-peaks/: example.cpp
ana/waveAna/: pulseArea.cpp  simpAna.cpp
demo/20231228 (2)/: 20231228 (2)_01.csv  20231228 (2)_02.csv  20231228 (2)_03.csv  20231228 (2)_04.csv  20231228 (2)_05.csv  20231228 (2)_06.csv  20231228 (2)_07.csv  20231228 (2)_08.csv
demo/20231228 (3)/: 20231228 (3)_01.csv  20231228 (3)_02.csv  20231228 (3)_05.csv  20231228 (3)_06.csv  20231228 (3)_07.csv  20231228 (3)_08.csv  20231228 (3)_09.csv  20231228 (3)_10.csv
demo/20231228 (4)/: 20231228 (4)_02.csv  20231228 (4)_03.csv  20231228 (4)_05.csv  20231228 (4)_08.csv  20231228 (4)_09.csv  20231228 (4)_10.csv
demo/20231228 (5)/: 20231228 (5)_01.csv  20231228 (5)_02.csv  20231228 (5)_03.csv  20231228 (5)_07.csv  20231228 (5)_08.csv  20231228 (5)_09.csv  20231228 (5)_10.csv
demo/20231228 (6)/: 20231228 (6)_02.csv  20231228 (6)_03.csv  20231228 (6)_05.csv  20231228 (6)_09.csv  20231228 (6)_10.csv
demo/20231228 (7)/: 20231228 (7)_01.csv  20231228 (7)_02.csv  20231228 (7)_03.csv  20231228 (7)_04.csv  20231228 (7)_05.csv  20231228 (7)_06.csv  20231228 (7)_07.csv  20231228 (7)_08.csv  20231228 (7)_10.csv
demo/20231228 (8)/: 20231228 (8)_02.csv  20231228 (8)_03.csv  20231228 (8)_04.csv  20231228 (8)_07.csv  (+1 more)
old/: CSV2root.C
(+44 files in other folders)
